fixed sidebar page shift

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,8 @@
 @layer base {
     html {
         font-family: Kanit, system-ui;
+        width: 100vw;
+        overflow-x: hidden;
     }
 }
 
